# nccl-plugin-gpudirecttcpx

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  common.cc  common.h  config.h.in  connect.cc  connect.h  ctrl_sock.h  flags.cc  flags.h  flow_mapper.h  macro.h  nccl_plugin.cc  net_tcpx.cc  net_tcpx.h  timeout.cc  timeout.h  work_queue.cc  work_queue.h  work_queue_states.h
src/adapter/: CMakeLists.txt  adapter1.h  debug1.h  param1.h  ret.h
src/adapter/native/: CMakeLists.txt  adapter.cc  adapter.h  debug.cc  debug.h  param.cc  param.h  ret.cc  ret.h  tcpx.h
src/adapter/nccl/: CMakeLists.txt  adapter.h  debug.cc  debug.h  param.cc  param.h  ret.h
src/devcomm/: CMakeLists.txt  inline.h  unpack1.h  unpack_defs1.h
src/devcomm/nccl/: CMakeLists.txt  inline.cu  inline.h  unpack1.cu  unpack1.h  unpack_defs1.h
src/gpu/: CMakeLists.txt  common.cu  common.h  cuda_wrapper.cu  cuda_wrapper.h  rx_pool.cu  rx_pool.h  tx_pool.cu  tx_pool.h
src/misc/: CMakeLists.txt  alloc1.h  checks1.h  cuda_checks.h  socket_utils.cc  socket_utils.h
src/rx_buf_mgr_client/: CMakeLists.txt  application_registry_client.cc  application_registry_client.h  flow_steer_ntuple.h  flow_steer_proto_utils.cc  flow_steer_proto_utils.h  rx_rule_client.cc  rx_rule_client.h  unix_socket_client.cc  unix_socket_client.h  unix_socket_connection.cc  unix_socket_connection.h
src/rx_buf_mgr_client/proto/: CMakeLists.txt  unix_socket_message.proto  unix_socket_proto.proto
src/sock/: CMakeLists.txt  datapipe.cc  datapipe.h  tcpx.h
src/stats/: CMakeLists.txt  exporter.h  monitoring.cc  monitoring.h  stats_buffer.h  stats_buffer_test.cc  tracepoint.cc  tracepoint.h  tracepoint_test.cc
